primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Meaningful_Event__c/Meaningful_Event__c.object-meta.xml
<CustomObject>
    <label>Meaningful Event</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Meaningful Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meaningful Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>