primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Agent_Note__c.field-meta.xml
<CustomField>
    <fullName>Agent_Note__c</fullName>
    <label>Agent Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>