primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>