primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>